--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
-<h2>Editing "<%= @post.title %>"</h2>
-<%= form_tag post_path(@post), method: "patch" do %>
-<% if @post.errors.any? %>
+<h2>Create an Author</h2>
+<%= form_tag posts_path, method: "post" do %>
+  <% if @post.errors.any? %>
     <div id="error_explanation">
       <h3>There were some errors:</h3>
       <ul>
@@ -10,13 +10,12 @@
       </ul>
     </div>
   <% end %>
-
   <% if @post.errors[:title].empty? %>
     <div class="field">
   <% else %>
     <div class="field_with_errors">
   <% end %>
-    <%= label_tag "title", "Title" %>
+    <%= label_tag "title", "Name" %>
     <%= text_field_tag "title", @post.title %>
   </div>
 
@@ -25,13 +24,8 @@
   <% else %>
     <div class="field_with_errors">
   <% end %>
-    <%= label_tag "category", "Category" %>
-    <p>Must be either "Fiction" or "Non-Fiction".</p>
+    <%= label_tag "category", "Email" %>
     <%= text_field_tag "category", @post.category %>
-    <p>
-      Please type carefully as our top scientists are working around the clock to
-      enable state-of-the-art dropdown technology for this form field.
-    </p>
   </div>
 
   <% if @post.errors[:content].empty? %>
@@ -39,10 +33,9 @@
   <% else %>
     <div class="field_with_errors">
   <% end %>
-    <%= label_tag "content", "Content" %>
-    <br />
-    <%= text_area_tag "content", @post.content %>
+    <%= label_tag "content", "Phone Number" %>
+    <%= text_field_tag "content", @post.content %>
   </div>
-  <%= submit_tag "Update" %>
-<% end %>
 
+  <%= submit_tag "Create" %>
+<% end %>
